2004-07-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Rework event-handling subroutines so that the
	intermediate window resize and redraw events are skipped if possible.
	This reduces the hysteresis when the window is resized by dragging.
	Patch by Jay Painter <jpaint@u.washington.edu>.

2004-07-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (place_labels3d place_arrows3d get_arrow3d): Test for
	wrap-around of negative coordinates when converted to unsigned screen
	coordinates by map3d_position. If wrap-around has occurred, then skip
	this label or arrow when drawing the 3D plot. This really should be a
	general test for out-of-bounds, but the simple test at least catches
	some potentially fatal errors that have already happened.

2004-07-04  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: --enable-histograms

	* demo/histograms.dem demo/histograms2.dem demo/immigration.dat:
	Demonstration files for 'plot with histograms'

	* docs/gnuplot.doc: Documentation for 'plot with histograms'.

	* src/datafile.c src/datafile.h src/gadgets.c src/gadgets.h
	src/gp_types.h src/graph3d.c src/graphics.c src/graphics.h
	src/plot2d.c src/save.c src/set.c src/show.c src/tables.c
	src/tables.h src/unset.c:  Integrate SourceForge patchset #606169.

	New plot style "with histograms" produces a bar chart from a sequence
	of data columns in parallel. Each element of the `plot` command must
	specify a single input data source (e.g. one column of the input file),
	possibly with associated tic values or key titles.  Three styles of
	histogram layout are currently supported. 
	     set style histogram clustered {gap <gapsize>}
	     set style histogram rowstacked
	     set style histogram columnstacked
			   
2004-07-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.h src/plot2d.c (get_data) src/plot3d.c (get_3ddata)
	src/save.c (save_set_all) graphics.c (bound_intersect)
	term/cgm.trm term/pdf.trm term/svg.trm: