@@ -1,3 +1,8 @@
+2004-07-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/win/wtext.c (WndTextProc): Fix bug introduced during
+	ANSI-fication operation.
+
 2004-07-05  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/gplt_x11.c: Rework event-handling subroutines so that the
